k8s/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  # sessionAffinity: ClientIP # check README.md
  selector:
    app: kubia
  ports:
    - name: http
      port: 80
      targetPort: http # or use named port from Pod spec
